--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/button.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/container.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/top-actions.scss";
+@import "./blocks/./navigation.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/product.scss";
+@import "./blocks/about-us.scss";
